# IBMdataengineering

./: .gitignore  Banks.db  Makefile  README.md  pyproject.toml  requirements.txt  world_economies.db
src/: main.py
src/config/: config.py
src/datafiles/bankdata/: Largest_banks_data.csv
src/logging/: logger.py
src/scraping/: bank_project.py  gdpdata.py  scraper.py
src/unittesting/: test_bank_project.py
