[project]
name = "ibmdataengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "loguru==0.7.3",
    "numpy==2.3.0",
    "pandas==2.3.1",
    "pendulum==3.1.0",
    "pylint==3.3.7",
    "pytest==8.4.1",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "requests-mock==1.12.1",
    "urllib3==2.1.0",
]
